--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdkVersion 24
     buildToolsVersion "24.0.0"
     defaultConfig {
-        applicationId "de.devfest.devfest"
+        applicationId "de.devfest"
         minSdkVersion 15
         targetSdkVersion 24
         versionCode 1
@@ -44,7 +44,8 @@ dependencies {
     compile 'io.reactivex:rxandroid:1.1.0'
     compile 'com.github.pwittchen:reactivenetwork:0.4.0'
     compile 'com.jakewharton.timber:timber:4.1.2'
-
+    apt 'com.google.dagger:dagger-compiler:2.5'
+    provided 'javax.annotation:jsr250-api:1.0'
     testCompile 'junit:junit:4.12'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
     androidTestCompile 'com.android.support.test:runner:0.5'
