--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,22 +1,26 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'me.tatarka.retrolambda'
 
 android {
     compileSdkVersion 24
     buildToolsVersion "24.0.0"
     defaultConfig {
-        applicationId "de.devfest"
-        minSdkVersion 15
-        targetSdkVersion 24
-        versionCode 1
-        versionName "1.0.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+
+    productFlavors {
+        hh2016 {
+            minSdkVersion 15
+            targetSdkVersion 24
+            applicationId "de.devfest.hh2016"
+            versionCode 1
+            versionName "1.0.0"
         }
     }
     compileOptions {
@@ -39,13 +43,18 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.0.0'
     compile 'com.android.support:design:24.0.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha3'
-    compile 'com.google.dagger:dagger:2.5'
     compile "io.reactivex:rxjava:1.1.6"
     compile 'io.reactivex:rxandroid:1.1.0'
     compile 'com.github.pwittchen:reactivenetwork:0.4.0'
     compile 'com.jakewharton.timber:timber:4.1.2'
-    apt 'com.google.dagger:dagger-compiler:2.5'
+
+    compile 'com.google.firebase:firebase-auth:9.0.0'
+    compile 'com.google.android.gms:play-services-auth:9.0.0'
+
+    compile 'com.google.dagger:dagger:2.5'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.5'
     provided 'javax.annotation:jsr250-api:1.0'
+
     testCompile 'junit:junit:4.12'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
     androidTestCompile 'com.android.support.test:runner:0.5'
