--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     compile 'io.reactivex:rxandroid:1.1.0'
     compile 'com.github.pwittchen:reactivenetwork:0.4.0'
     compile 'com.jakewharton.timber:timber:4.1.2'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 
     compile 'com.google.firebase:firebase-auth:9.0.0'
     compile 'com.google.android.gms:play-services-auth:9.0.0'
