--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,5 @@
 org.gradle.jvmargs=-Xmx1536m
+
+# cannot update, because of 'com.google.gms:google-services:3.0.0'
+playServicesVersion=9.0.0
+supportVersion=24.0.0
