--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,11 +42,12 @@ android {
 dependencies {
     compile "com.android.support:appcompat-v7:$supportVersion"
     compile "com.android.support:design:$supportVersion"
+    compile "com.android.support:cardview-v7:$supportVersion"
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha3'
     compile "io.reactivex:rxjava:1.1.6"
     compile 'io.reactivex:rxandroid:1.1.0'
     compile 'com.jakewharton.timber:timber:4.1.2'
-    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.jakewharton.threetenabp:threetenabp:1.0.3'
 
     compile "com.google.firebase:firebase-database:$playServicesVersion"
