--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,9 +44,9 @@ dependencies {
     compile "com.android.support:design:$supportVersion"
     compile "com.android.support:cardview-v7:$supportVersion"
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha7'
-    compile "io.reactivex:rxjava:1.1.6"
-    compile 'io.reactivex:rxandroid:1.1.0'
-    compile 'com.jakewharton.timber:timber:4.1.2'
+    compile "io.reactivex:rxjava:1.1.9"
+    compile 'io.reactivex:rxandroid:1.2.1'
+    compile 'com.jakewharton.timber:timber:4.3.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.jakewharton.threetenabp:threetenabp:1.0.3'
 
@@ -55,14 +55,16 @@ dependencies {
     compile "com.google.firebase:firebase-messaging:$playServicesVersion"
     compile "com.google.android.gms:play-services-auth:$playServicesVersion"
 
-    compile 'com.google.dagger:dagger:2.5'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.5'
+    compile 'com.google.dagger:dagger:2.6.1'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.6.1'
     provided 'javax.annotation:jsr250-api:1.0'
 
-    testCompile 'junit:junit:4.12'
+   /* testCompile 'junit:junit:4.12'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
     androidTestCompile 'com.android.support.test:runner:0.5'
-    androidTestCompile "com.android.support:support-annotations:$supportVersion"
+    androidTestCompile "com.android.support:support-annotations:$supportVersion"*/
 }
 apply from: 'checkstyle.gradle'
 apply plugin: 'com.google.gms.google-services'
+// version checker
+apply plugin: 'com.github.ben-manes.versions'
