--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,7 @@ dependencies {
     compile 'com.jakewharton.timber:timber:4.3.1'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.jakewharton.threetenabp:threetenabp:1.0.4'
-//    compile 'com.github.aryarohit07:glide-facedetection-transformation:0.3.0'
+    compile 'com.github.aryarohit07:glide-facedetection-transformation:0.3.0'
 
     compile "com.google.firebase:firebase-database:$playServicesVersion"
     compile "com.google.firebase:firebase-auth:$playServicesVersion"
