open session details screen on session click, add/remove session from speaker details screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
 
         <activity android:name=".screens.speakerdetails.SpeakerDetailsActivity"/>
 
+        <activity android:name=".screens.sessiondetails.SessionDetailsActivity"/>
+
         <service
             android:name=".notifications.NotificationService"
             android:exported="false">
