--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,8 +2,8 @@ apply plugin: 'com.android.application'
 apply plugin: 'me.tatarka.retrolambda'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.0"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.0"
     defaultConfig {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -17,7 +17,7 @@ android {
     productFlavors {
         hamburg {
             minSdkVersion 21
-            targetSdkVersion 24
+            targetSdkVersion 25
             applicationId "de.devfest.hamburg"
             versionCode 1
             versionName "1.0.0"
@@ -43,7 +43,7 @@ dependencies {
     compile "com.android.support:appcompat-v7:$supportVersion"
     compile "com.android.support:design:$supportVersion"
     compile "com.android.support:cardview-v7:$supportVersion"
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha9'
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta1'
     compile "io.reactivex:rxjava:1.2.0"
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'com.jakewharton.timber:timber:4.3.1'
