--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,9 @@
 apply plugin: 'com.android.application'
-apply plugin: 'me.tatarka.retrolambda'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    buildToolsVersion "25.0.3"
     defaultConfig {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -14,6 +14,7 @@ android {
         }
     }
 
+    flavorDimensions "devfest"
     productFlavors {
         hamburg {
             minSdkVersion 21
@@ -21,6 +22,7 @@ android {
             applicationId "de.devfest.hamburg"
             versionCode 1
             versionName "1.0.0"
+            dimension "devfest"
         }
 //        fbds16 {
 //            minSdkVersion 21
@@ -47,32 +49,32 @@ android {
 }
 
 dependencies {
-    compile "com.android.support:appcompat-v7:$supportVersion"
-    compile "com.android.support:design:$supportVersion"
-    compile "com.android.support:cardview-v7:$supportVersion"
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
-    compile "io.reactivex:rxjava:1.2.0"
-    compile 'io.reactivex:rxandroid:1.2.1'
-    compile 'com.jakewharton.timber:timber:4.3.1'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.jakewharton.threetenabp:threetenabp:1.0.4'
+    implementation "com.android.support:appcompat-v7:$supportVersion"
+    implementation "com.android.support:design:$supportVersion"
+    implementation "com.android.support:cardview-v7:$supportVersion"
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation "io.reactivex.rxjava2:rxjava:2.1.0"
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'com.jakewharton.timber:timber:4.5.1'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.0.4'
 
-    compile "com.google.firebase:firebase-database:$playServicesVersion"
-    compile "com.google.firebase:firebase-auth:$playServicesVersion"
-    compile "com.google.firebase:firebase-messaging:$playServicesVersion"
-    compile "com.google.android.gms:play-services-auth:$playServicesVersion"
-    compile "com.google.android.gms:play-services-vision:$playServicesVersion"
+    implementation "com.google.firebase:firebase-database:$playServicesVersion"
+    implementation "com.google.firebase:firebase-auth:$playServicesVersion"
+    implementation "com.google.firebase:firebase-messaging:$playServicesVersion"
+    implementation "com.google.android.gms:play-services-auth:$playServicesVersion"
+    implementation "com.google.android.gms:play-services-vision:$playServicesVersion"
 
-    compile 'com.google.dagger:dagger:2.7'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.7'
-    provided 'javax.annotation:jsr250-api:1.0'
-
-    /* testCompile 'junit:junit:4.12'
-     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
-     androidTestCompile 'com.android.support.test:runner:0.5'
-     androidTestCompile "com.android.support:support-annotations:$supportVersion"*/
+    implementation 'com.google.dagger:dagger:2.11'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
+    implementation "com.google.dagger:dagger-android-support:2.11"
+    annotationProcessor 'com.google.dagger:dagger-android-processor:2.11'
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 }
 apply from: 'checkstyle.gradle'
 apply plugin: 'com.google.gms.google-services'
 // version checker
 apply plugin: 'com.github.ben-manes.versions'
+repositories {
+    mavenCentral()
+}
