--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,23 @@
 buildscript {
+    ext.kotlin_version = '1.1.3-2'
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0-beta2'
-        classpath 'me.tatarka:gradle-retrolambda:3.2.5'
-        classpath 'com.google.gms:google-services:3.0.0'
+        classpath 'com.android.tools.build:gradle:3.0.0-alpha7'
+        classpath 'com.google.gms:google-services:3.1.0'
 
         // dependency version checker. Use: ./gradlew dependencyUpdate
         classpath 'com.github.ben-manes:gradle-versions-plugin:0.13.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
 allprojects {
     repositories {
         jcenter()
+        google()
     }
 }
 
