--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,8 @@
 apply plugin: 'com.android.application'
-apply plugin: 'me.tatarka.retrolambda'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 26
+    buildToolsVersion "26.0.1"
     defaultConfig {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -13,22 +12,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
+    flavorDimensions "devfest"
     productFlavors {
         hamburg {
             minSdkVersion 21
-            targetSdkVersion 25
+            targetSdkVersion 26
             applicationId "de.devfest.hamburg"
             versionCode 1
             versionName "1.0.0"
+            dimension "devfest"
         }
-//        fbds16 {
-//            minSdkVersion 21
-//            targetSdkVersion 25
-//            applicationId "de.devfest.fbds16"
-//            versionCode 1
-//            versionName '1.0.0'
-//        }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -50,7 +43,7 @@ dependencies {
     compile "com.android.support:appcompat-v7:$supportVersion"
     compile "com.android.support:design:$supportVersion"
     compile "com.android.support:cardview-v7:$supportVersion"
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
+    compile 'com.android.support.constraint:constraint-layout:1.1.0-beta1'
     compile "io.reactivex:rxjava:1.2.0"
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'com.jakewharton.timber:timber:4.3.1'
