--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,8 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0-beta2'
-        classpath 'me.tatarka:gradle-retrolambda:3.2.5'
-        classpath 'com.google.gms:google-services:3.0.0'
+        classpath 'com.android.tools.build:gradle:3.0.0-alpha9'
+        classpath 'com.google.gms:google-services:3.1.0'
 
         // dependency version checker. Use: ./gradlew dependencyUpdate
         classpath 'com.github.ben-manes:gradle-versions-plugin:0.13.0'
@@ -15,6 +14,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        google()
     }
 }
 
