--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
 org.gradle.jvmargs=-Xmx1536m
 
-playServicesVersion=11.0.4
-supportVersion=26.0.0
+playServicesVersion=11.2.0
+supportVersion=26.0.1
+daggerVersion=2.7
