--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,17 @@
 buildscript {
+    ext.kotlin_version = '1.1.4'
+    ext.gradle_version = '3.0.0-beta2'
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-alpha9'
+        classpath "com.android.tools.build:gradle:$gradle_version"
         classpath 'com.google.gms:google-services:3.1.0'
 
         // dependency version checker. Use: ./gradlew dependencyUpdate
         classpath 'com.github.ben-manes:gradle-versions-plugin:0.13.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
