--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,12 @@
 buildscript {
-    ext.kotlin_version = '1.1.4'
-    ext.gradle_version = '3.0.0-beta2'
+    ext.kotlin_version = '1.1.4-3'
+    ext.gradle_version = '3.0.0-beta6'
     repositories {
         jcenter()
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-beta3'
+        classpath "com.android.tools.build:gradle:$gradle_version"
         classpath 'com.google.gms:google-services:3.1.0'
 
         // dependency version checker. Use: ./gradlew dependencyUpdate
